lab1/Test/L1-A-3-98.output
Error Type A at Line 15
Error Type A at Line 16
Error Type B at Line 17
Error Type B at Line 18
Error Type B at Line 18
Error Type B at Line 18
