lab1/Test/L1-A-3-98.cmm
int wFJxGjm ( ) {
  float FlPO0ret9X3mD5 = 1821540006 . KL0L == - - 
    J * GIUMK73shVuuF4PODDTV + pa - zNxlJ0grjH8B - TcosVl1 
    - NVvDTs0pkPh3MH - tS7Muc3NjA < - U8AJ2_1U7ClK ( _3gMguthHwwIZ1 
    ) * xh5L5Ct3kNC * FKDpz5D6y_3noTdodpdD * W9_B_2awmZAv8TM5BZHT 
    * knNuloLMT50Dq <= 632334411 - VbiCxe1 + INtDHxp - 
    ItrJ_tok1B6 != rF3gZq9GqYWw5 ( ) / qQxImZ && ! ! tapkEF6Bux5Sc0pgkRyM 
    / QKguBuEMpkO7sW - jDX3EqX70C == XBB3qkm5QcVkk2 != 
    iNSKK != cc != eidO_L <= Z2 < UV_W == LGvxYDj_i9K1 
    <= rQWJ4WKh9tuLER >= bz8NN8qduiXbP2XWN && ! ! Kadon 
    - FSJgViX3 - vnTaBDmxCqaQA - odKRjrZkrZp <= TbnXm88fOqmzm 
    , CT5ugSid = - ! h == tsxVnXo == XI4VAtAYY7v4fg0 < 
    LwMLL6AGT4dpi != FHqN0d30J3yPyHKHghY && MHj5jMKq_G5A86pvZ 
    || jTEROVVdu_rc || H8PKDd , l23hZ7tgCKfnUSWINHM [ 
    1675886216 ] [ 1309270180 ] ^, ltaYkNI_6Yepi3 ;
$}
float ] ;
= return < 